Contacto - fix text alignment

--- a/css/contact.css
+++ b/css/contact.css
@@ -21,7 +21,7 @@ section#contact {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5em;
-    text-align: left;
+    text-align: justify;
 }
 
 .container.form,
